// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a visually hidden legend 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders with errorMessage 1`] = `
<fieldset
  aria-describedby="fieldset-with-error-error"
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="default alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Schnauzer"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          aria-invalid="false"
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="Aussie"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          type="checkbox"
        />
        <div
          className="enabled border borderRadiusMd sizeMd check thickBorder"
        />
      </div>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
        <div
          className="box paddingX1"
        />
      </div>
    </div>
  </div>
  <div
    className=""
    id="fieldset-with-error-error"
  >
    <div
      className="error alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="fieldset-with-error-error"
      >
        <div
          className="box"
          role="alert"
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
          >
            <div
              className="FlexItem"
            >
              <div
                className="box"
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="error icon iconBlock"
                  height={16}
                  role="img"
                  viewBox="0 0 24 24"
                  width={16}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              At least 1 item must be selected
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</fieldset>
`;
